@@ -26,7 +26,7 @@ array(
         'code' => 'column=code;type=string',
         'symbolLeft' => 'column=symbol_left;type=string',
         'symbolRight' => 'column=symbol_right;type=string',
-        'decimalPoint' => 'column=float;type=string',
+        'decimalPoint' => 'column=decimal_point;type=string',
         'thousandsPoint' => 'column=thousands_point;type=string',
         'decimalPlaces' => 'column=float;type=string',
         'rate' => 'column=value;type=float',
